Fixed the margin of the first column when there are less than 5 visible columns.

--- a/VividTracker/ClientApp/src/components/UseTrackerWrapper/UseTrackerWrapperStyles/UseTrackerComponent.css
+++ b/VividTracker/ClientApp/src/components/UseTrackerWrapper/UseTrackerWrapperStyles/UseTrackerComponent.css
@@ -92,6 +92,9 @@
     flex-direction: column;
     justify-content: flex-end;
 }
+.TrackingItemsColumn:nth-child(2){
+    margin-left: 2rem !important;
+}
 .TrackingItemsColumnHeader{
     font-family: 'Open Sans';
     font-style: normal;
